#22  Add "Help!" button on Admin panel linking to RTFM instructions.
     Improve checking if key exists on updating a setting.
#30  Fix bug with incorrectly checking cgSetting.is_required checkbox
     Make controller a tad more portable.

++++++++++++++++++++++++++++++++
++   ClientConfig 1.0.0-pl    ++
++   Released on 2012-12-09   ++
++++++++++++++++++++++++++++++++
First release