@@ -1,3 +1,4 @@
+#24  Remember last visited tab in both admin and client view.
 #22  Add "Help!" button on Admin panel linking to RTFM instructions.
      Improve checking if key exists on updating a setting.
 #30  Fix bug with incorrectly checking cgSetting.is_required checkbox
